Refine module openness check